--- a/views/intro_nudging2.ejs
+++ b/views/intro_nudging2.ejs
@@ -53,7 +53,8 @@
 <body>
     <div class="loading-container">
         <h1>Uwaga! Na zadanie będziesz miał <%= wylosowanyCzas %> sekund.</h1>
-        <p>Jesteś w trakcie zakupów. Wybrałeś już wszystkie interesujące Cię produkty. Twoim zadaniem będzie przejście do płatności.</p>
+        <p>Jesteś w trakcie zakupów biletów do kina. Wybrałeś już wszystkie interesujące Cię opcje.
+             Twoim zadaniem będzie przejście do płatności.</p>
         <form action="/intro_nudging2" method="POST" id="intro_nudging2-form">
             <button type="submit" class="submit-btn">Przejdź do zadania</button>
         </form>
