--- a/views/intro_task8.ejs
+++ b/views/intro_task8.ejs
@@ -67,7 +67,8 @@
 <body>
     <div class="loading-container">
         <h1>Uwaga! Na zadanie będziesz miał <%= wylosowanyCzas %> sekund.</h1>  
-        <p>Jesteś w trakcie zamawiania pokoju hotelowego na wakacje. Wybierz interesujące Cię opcje i przejdź do płatności.</p>
+        <p>Jesteś w trakcie zamawiania biletów piłkarskich. Słyszałaś/eś o możliwości kupienia koszulek w pakiecie, 
+            jednak nie jesteś co do tego pomysłu przekonany. Wybierz odpowiednie opcje.</p>
         <form action="/intro_task8" method="POST" id="intro_task8-form">
             <button type="submit" class="submit-btn">Przejdź do zadania</button>
         </form>
@@ -77,29 +78,7 @@
     </div>
 
     <script>
-        // // Czas trwania ładowania w milisekundach
-        // const loadingDuration = 8000;
-        // const progressBar = document.getElementById('progress-bar');
-
-        // // Funkcja wypełniająca pasek postępu
-        // function startProgressBar(duration) {
-        //     const interval = 50; // Odświeżanie co 50ms
-        //     const step = 100 / (duration / interval); // Obliczenie kroku
-        //     let progress = 0;
-
-        //     const timer = setInterval(() => {
-        //         progress += step;
-        //         if (progress >= 100) {
-        //             progress = 100;
-        //             clearInterval(timer);
-        //             window.location.href = '/task8';
-        //         }
-        //         progressBar.style.width = `${progress}%`;
-        //     }, interval);
-        // }
-
-        // // Uruchom pasek postępu
-        // startProgressBar(loadingDuration);
+     
     </script>
 </body>
 </html>
