--- a/views/task4.ejs
+++ b/views/task4.ejs
@@ -6,6 +6,8 @@
     <!-- Jeśli w poprzednich widokach używasz Bootstrapa -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
+
+        
         body {
             background-color: #f8f9fa;
             display: flex;
@@ -64,6 +66,12 @@
             height: 100%;
             transition: width 0.1s linear;
         }
+        .runing-icon {
+        display: block;
+        margin: 0 auto 20px;}
+
+
+
     </style>
 </head>
 <body>
@@ -75,8 +83,8 @@
      <% } 
      else { %>
     <div class="task-container">
+        <img src="/newspaper.png" alt="shop" width="100" height="100" class="newspaper-icon"> 
         <h1>Wybierz najkorzystniejszą dla siebie opcję</h1>
-        
         <form id="task4-form" action="/task4" method="POST" id="task4-form"> <!-- Dodano id -->
             <table>
                 <tr>
@@ -147,7 +155,7 @@
                     // Automatyczne przesłanie formularza
                     form.submit();
                 }
-                progressBar.style.width = `${progress}%`;
+                progressBar.style.width = ${progress}%;
             }, interval);
         }
 
