--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -69,7 +69,7 @@
 <body>
 
     <div class="task-container">
-        <h1>To już koniec zadania!</h1>
+        <h1>To już koniec badania!</h1>
         <h3>Dziękujemy za udział w badaniu! Zaraz zostaniesz przekierowany do swojego wyniku
             <br>
             Zanim to nastąpi, prosimy o ocenienie skali podchwytliwości zadań. Jaką trudność w skali od 1 do 10 przysporzyły Ci zadania?
