--- a/views/task1.ejs
+++ b/views/task1.ejs
@@ -118,7 +118,12 @@
     
 
     <!-- JavaScript do obsługi paska postępu -->
-    <script>
+    <script> 
+    window.onpageshow = function(event) {
+        if (event.persisted) { // Jeśli strona wraca z pamięci podręcznej bfcache
+            window.location.reload(); // Wymusza ponowne załadowanie GET /task1
+        }};
+        
          // Pobranie wartości czasu wylosowanego w backendzie
         const taskDuration = <%= wylosowanyCzas %> * 1000; // Przeliczamy na milisekundy
         const progressBar = document.getElementById('progress-bar');
@@ -150,21 +155,23 @@
         startProgressBar(taskDuration);
 
 
-
-
         // Nasłuchiwanie zdarzenia cofnięcia w przeglądarce
-    window.onpopstate = function () {
-        alert("Nie możesz wrócić do poprzedniej strony. Przekierowanie do strony głównej.");
-        window.location.href = "/register";  // Przekierowanie lub inna strona zabezpieczająca
-    };
-    // Zapobiegaj zapisywaniu tej strony w historii
-    history.pushState(null, null, location.href);
-    window.addEventListener('popstate', function () {
+        window.onpopstate = function () {
+        const userChoice = confirm("Czy na pewno chcesz opuścić tę stronę?");
+        if (userChoice) {
+        // Użytkownik wybrał "OK" → przekierowanie
+        window.location.href = "/register";
+        } else {
+        // Użytkownik wybrał "Anuluj" → zostaje na stronie i zapobiegamy cofnięciu
         history.pushState(null, null, location.href);
-    });
+        }
+        };
+        // Zapobiegaj zapisywaniu tej strony w historii
+        history.pushState(null, null, location.href);
+        window.addEventListener('popstate', function () {
+        history.pushState(null, null, location.href);
+        });
 
-
-    
     </script>
 
     <!-- Bootstrap JS -->
