--- a/views/task7.ejs
+++ b/views/task7.ejs
@@ -112,8 +112,12 @@
 </body>
 </html>
 <script>
-    // Zakładamy, że w routes/task7.js robisz coś w stylu:
-    // res.render('task4', { wylosowanyCzas: 5 });
+    window.onpageshow = function(event) {
+        if (event.persisted) { // Jeśli strona wraca z pamięci podręcznej bfcache
+            window.location.reload(); // Wymusza ponowne załadowanie GET /task1
+        }};
+
+   
     const taskDuration = 30 * 1000; // milisekundy
     const progressBar = document.getElementById('progress-bar');
 
@@ -136,4 +140,22 @@
     }
 
     startProgressBar(taskDuration);
+       
+    
+    // Nasłuchiwanie zdarzenia cofnięcia w przeglądarce
+       window.onpopstate = function () {
+        const userChoice = confirm("Czy na pewno chcesz opuścić tę stronę?");
+        if (userChoice) {
+        // Użytkownik wybrał "OK" → przekierowanie
+        window.location.href = "/register";
+        } else {
+        // Użytkownik wybrał "Anuluj" → zostaje na stronie i zapobiegamy cofnięciu
+        history.pushState(null, null, location.href);
+        }
+        };
+        // Zapobiegaj zapisywaniu tej strony w historii
+        history.pushState(null, null, location.href);
+        window.addEventListener('popstate', function () {
+        history.pushState(null, null, location.href);
+        });
 </script>
