--- a/views/task3.ejs
+++ b/views/task3.ejs
@@ -131,6 +131,10 @@
     </div>
 <% } %>
     <script>
+        window.onpageshow = function(event) {
+        if (event.persisted) { // Jeśli strona wraca z pamięci podręcznej bfcache
+            window.location.reload(); // Wymusza ponowne załadowanie GET /task1
+        }};
         const taskDuration = <%= wylosowanyCzas %> * 1000;
         const progressBar = document.getElementById('progress-bar');
         const form = document.getElementById('task3-form');
@@ -154,6 +158,24 @@
         }
 
         startProgressBar(taskDuration);
+
+        // Nasłuchiwanie zdarzenia cofnięcia w przeglądarce
+        window.onpopstate = function () {
+        const userChoice = confirm("Czy na pewno chcesz opuścić tę stronę?");
+        if (userChoice) {
+        // Użytkownik wybrał "OK" → przekierowanie
+        window.location.href = "/register";
+        } else {
+        // Użytkownik wybrał "Anuluj" → zostaje na stronie i zapobiegamy cofnięciu
+        history.pushState(null, null, location.href);
+        }
+        };
+        // Zapobiegaj zapisywaniu tej strony w historii
+        history.pushState(null, null, location.href);
+        window.addEventListener('popstate', function () {
+        history.pushState(null, null, location.href);
+        });
+        
     </script>
 </body>
 </html>
