--- a/views/task5.ejs
+++ b/views/task5.ejs
@@ -80,6 +80,12 @@
     </style>
 </head>
 <body>
+    <% if (completedTasks && completedTasks.includes('task5')) { %>
+        <p>To zadanie zostało już ukończone. Prosimy nie cofać kart w przeglądarce. Prosimy o powrót do: 
+            <a href="/register">strony rejestracji</a>.
+        </p>
+      <% } 
+      else { %>
     <div class="task-container">
         <img src="/running.png" alt="shop" width="100" height="100" class="running-icon">
         <h1>Dokończ proces rejestracji</h1>
@@ -107,6 +113,10 @@
         </div>
     </div>
     <script>
+        window.onpageshow = function(event) {
+        if (event.persisted) { // Jeśli strona wraca z pamięci podręcznej bfcache
+            window.location.reload(); // Wymusza ponowne załadowanie GET /task1
+        }};
         const taskDuration = <%= wylosowanyCzas %> * 1000;
         const progressBar = document.getElementById('progress-bar');
         const form = document.getElementById('task5-form');
@@ -128,6 +138,26 @@
             }, interval);
         }
         startProgressBar(taskDuration);
+       
+       
+        // Nasłuchiwanie zdarzenia cofnięcia w przeglądarce
+       window.onpopstate = function () {
+        const userChoice = confirm("Czy na pewno chcesz opuścić tę stronę?");
+        if (userChoice) {
+        // Użytkownik wybrał "OK" → przekierowanie
+        window.location.href = "/register";
+        } else {
+        // Użytkownik wybrał "Anuluj" → zostaje na stronie i zapobiegamy cofnięciu
+        history.pushState(null, null, location.href);
+        }
+        };
+        // Zapobiegaj zapisywaniu tej strony w historii
+        history.pushState(null, null, location.href);
+        window.addEventListener('popstate', function () {
+        history.pushState(null, null, location.href);
+        });
+        
     </script>
+    <% } %>
 </body>
 </html>
